# solagent

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  example.config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  rust.yml
docs/: config-example.toml  how-to-add-tool-to-solagent.md  how-to-usage.md
examples/: close_empty_token_accounts.rs  create_gibwork_task.rs  create_solana_tools.rs  deploy_collection.rs  deploy_token.rs  dynamic_tools.rs  fetch_price.rs  fetch_price_by_pyth.rs  gemini.rs  get_balance.rs  jupiter_fetch_price.rs  jupiter_stake_sol.rs  jupiter_swap.rs  launch_token_pumpfun.rs  locally.rs  mint_nft_to_collection.rs  native.rs  openai.rs  pumpfun_launch_token.rs  pyth_fetch_price.rs  quick_start.rs  rig.rs  rugcheck.rs  solagent.rs  token_security.rs  toolset.rs
examples/basic/: create_gibwork_task.rs  deploy_collection.rs  deploy_token.rs  get_balance.rs  mint_nft_to_collection.rs
examples/birdeye/: Cargo.toml
examples/close_empty_token_accounts/: Cargo.toml
examples/defi/: jupiter_stake_sol.rs  jupiter_swap.rs
examples/dexscreener/: Cargo.toml
examples/get_balance/: Cargo.toml
examples/gibwork/: Cargo.toml
examples/jupiter/: Cargo.toml
examples/ollama/: Cargo.toml
examples/plugin/: Cargo.toml
examples/plugin/src/: main.rs
examples/pumpfun/: Cargo.toml
examples/rig/: create_solana_tools.rs  running_locally.rs
examples/rugcheck/: Cargo.toml
examples/token_security/: Cargo.toml
examples/vector_search/: Cargo.toml
examples/vector_search/migrations/: 001_setup.sql
examples/vector_search/src/: main.rs
how-to/: how-to-add-tool-to-solagent.md
scripts/: add-template.sh
solagent/: Cargo.toml
solagent-adapters/langchain/: Cargo.toml
solagent-adapters/rig/birdeye/: Cargo.toml
solagent-adapters/rig/birdeye/src/: lib.rs
solagent-adapters/rig/cookie/: Cargo.toml
solagent-adapters/rig/cookie/src/: get_agent_by_ca.rs  get_agent_by_name.rs  lib.rs  search_tweets.rs
solagent-adapters/rig/dexscreener/: Cargo.toml
solagent-adapters/rig/dexscreener/src/: get_token_data_by_ticker.rs  lib.rs
solagent-adapters/rig/gibwork/: Cargo.toml
solagent-adapters/rig/gibwork/src/: create_gibwork_task.rs  lib.rs
solagent-adapters/rig/goplus/: Cargo.toml
solagent-adapters/rig/goplus/src/: lib.rs  solana_token_security_info.rs  token_malicious_info.rs  token_phishing_site_info.rs  token_security_info.rs
solagent-adapters/rig/helius/: Cargo.toml
solagent-adapters/rig/helius/src/: create_webhook.rs  delete_webhook.rs  get_assets_by_owner.rs  get_webhook.rs  lib.rs  transaction_parsing.rs
solagent-adapters/rig/jupiter/: Cargo.toml
solagent-adapters/rig/jupiter/src/: fetch_price.rs  get_token_data_by_address.rs  lib.rs  stake_with_jup.rs  trade.rs
solagent-adapters/rig/pyth/: Cargo.toml
solagent-adapters/rig/pyth/src/: pyth_fetch_price.rs
solagent-adapters/rig/rugcheck/: Cargo.toml
solagent-adapters/rig/rugcheck/src/: lib.rs  token_report_detailed.rs  token_report_summary.rs
solagent-adapters/rig/solayer/: Cargo.toml
solagent-adapters/rig/solayer/src/: lib.rs  stake_with_solayer.rs
solagent-adapters/rig/story/: Cargo.toml
solagent-adapters/rig/story/src/: lib.rs  license_tokens.rs  transaction.rs
solagent-ai/: Cargo.toml
solagent-ai/src/: lib.rs
solagent-config/: Cargo.toml
solagent-constants/: Cargo.toml
solagent-core/: Cargo.toml
solagent-core/.github/: pull_request_template.md
solagent-core/src/: config.rs  iwallet.rs  lib.rs
solagent-parameters/: Cargo.toml
solagent-parameters/.github/workflows/: ci.yml
solagent-parameters/src/: lib.rs
solagent-plugins/birdeye/: Cargo.toml
solagent-plugins/birdeye/src/: lib.rs  primitive.rs
solagent-plugins/cookie/: Cargo.toml
solagent-plugins/cookie/src/: get_agent_by_ca.rs  get_agent_by_name.rs  lib.rs  search_tweets.rs
solagent-plugins/dexscreener/: Cargo.toml
solagent-plugins/dexscreener/src/: get_token_data_by_ticker.rs  lib.rs
solagent-plugins/gibwork/: Cargo.toml
solagent-plugins/gibwork/src/: create_gibwork_task.rs  lib.rs
solagent-plugins/goplus/: Cargo.toml
solagent-plugins/helius/: Cargo.toml
solagent-plugins/helius/src/: get_webhook.rs  transaction_parsing.rs
solagent-plugins/jupiter/: Cargo.toml
solagent-plugins/jupiter/src/: fetch_price.rs  get_token_data_by_address.rs  trade.rs
solagent-plugins/pumpfun/: Cargo.toml
solagent-plugins/pumpfun/src/: launch_token_pumpfun.rs  lib.rs
solagent-plugins/pyth/: Cargo.toml
solagent-plugins/rugcheck/: Cargo.toml
solagent-plugins/solana/: Cargo.toml
solagent-plugins/solana/src/: close_empty_token_accounts.rs  deploy_collection.rs  deploy_token.rs  get_balance.rs  get_balance_other.rs  get_tps.rs  get_wallet_address.rs  lib.rs  mint_nft.rs  request_faucet_funds.rs  transfer.rs
solagent-plugins/solayer/: Cargo.toml
solagent-plugins/story/: Cargo.toml
solagent-plugins/story/src/: lib.rs  license.rs  license_tokens.rs  transaction.rs
solagent-primitives/: Cargo.toml
solagent-python/: .gitignore  README.md  pyproject.toml
solagent-python/scripts/: publish.sh
solagent-python/solagent/: __init__.py
solagent-rig/: Cargo.toml
solagent-rust/: README.md
solagent-rust/docs/: hot-to-add-feature.md  how-to-usage.md
solagent-rust/scripts/: add-template.sh
solagent-rust/solana-agent/: .env.example
solagent-tools/: Cargo.toml
solagent-typescript/: README.md
solagent-typescript/adapters/: package.json
solagent-typescript/core/: README.md  package.json  tsconfig.json
solagent-typescript/plugins/: README.md
solagent-typescript/wallet/: .eslintrc.js  .gitignore  README.md  jest.config.ts  package.json  tsconfig.json
solagent-utils/: Cargo.toml
solagent-wallet/solana/: Cargo.toml
solagent-wallet/solana/src/: lib.rs
solana-agent/: Cargo.toml  LICENSE
src/: config.rs  constants.rs  create_solana_tools.rs  lib.rs  primitives.rs  utils.rs
src/actions/: create_gibwork_task.rs  deploy_collection.rs  deploy_token.rs  fetch_price.rs  fetch_price_by_pyth.rs  get_tps.rs  (+12 more)
tests/: solagent.rs
(+147 files in other folders)
