[workspace]
resolver = "2"
members = [
    "packages/core",

    "packages/adapters/rig/goplus",
    "packages/adapters/rig/solana",
    "packages/adapters/rig/helius",
    "packages/adapters/rig/jupiter", 
    "packages/adapters/rig/rugcheck",
    "packages/adapters/rig/solayer", 
    "packages/adapters/rig/gibwork",
    "packages/adapters/rig/pyth",
    "packages/adapters/rig/pumpfun", 

    "packages/plugins/goplus",
    "packages/plugins/solana", 
    "packages/plugins/helius",
    "packages/plugins/jupiter", 
    "packages/plugins/rugcheck", 
    "packages/plugins/solayer", 
    "packages/plugins/gibwork",  
    "packages/plugins/pyth",  
    "packages/plugins/pumpfun", 
]

exclude = ["examples/plugin"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "z"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = "z"
