[workspace]
resolver = "2"
members = [
    "solagent-core",

    "solagent-adapters/rig/goplus",
    "solagent-adapters/rig/solana",
    "solagent-adapters/rig/helius",
    "solagent-adapters/rig/jupiter", 
    "solagent-adapters/rig/rugcheck",
    "solagent-adapters/rig/solayer", 
    "solagent-adapters/rig/gibwork",
    "solagent-adapters/rig/pyth",
    "solagent-adapters/rig/pumpfun", 

    "solagent-plugins/goplus",
    "solagent-plugins/solana", 
    "solagent-plugins/helius",
    "solagent-plugins/jupiter", 
    "solagent-plugins/rugcheck", 
    "solagent-plugins/solayer", 
    "solagent-plugins/gibwork",  
    "solagent-plugins/pyth",  
    "solagent-plugins/pumpfun", 
    "solagent-plugins/cookie", 
]

exclude = ["examples/plugin"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "z"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = "z"
