[workspace]
resolver = "2"
members = [
    # core
    "solagent-core",
    "solagent-parameters",
    "solagent-wallet/solana",

    # tools rig-based
    "solagent-adapters/rig/goplus",
    "solagent-adapters/rig/solana",
    "solagent-adapters/rig/helius",
    "solagent-adapters/rig/jupiter", 
    "solagent-adapters/rig/rugcheck",
    "solagent-adapters/rig/solayer", 
    "solagent-adapters/rig/gibwork",
    "solagent-adapters/rig/pyth",
    "solagent-adapters/rig/pumpfun", 
    "solagent-adapters/rig/cookie",
    "solagent-adapters/rig/dexscreener",

    # plugins
    "solagent-plugins/goplus",
    "solagent-plugins/solana", 
    "solagent-plugins/helius",
    "solagent-plugins/jupiter", 
    "solagent-plugins/rugcheck", 
    "solagent-plugins/solayer", 
    "solagent-plugins/gibwork",  
    "solagent-plugins/pyth",  
    "solagent-plugins/pumpfun", 
    "solagent-plugins/cookie", 
    "solagent-plugins/dexscreener",
    "solagent-plugins/story",
    
    # examples
    "examples/plugin", 
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "z"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = "z"
