[package]
name = "solagent-core"
version = "0.1.2"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "core"]
license = "Apache-2.0"
description = "solagent.rs core lib"

[dependencies]
solana-client = "2.1.7"
solana-sdk = "2.1.7"
solana-program = "2.1.7"
serde_json = "1.0"
rig-core = "0.7.0"
solagent-wallet-solana = "0.1.0"