[package]
name = "solagent-core"
version = "0.1.5"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "core"]
license = "Apache-2.0"
description = "solagent.rs core"

[dependencies]
solana-client = "2.1.7"
solana-sdk = "2.1.7"
solana-program = "2.1.7"
rig-core = "0.7.0"