[package]
name = "solagent-parameters"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "parameters"]
license = "Apache-2.0"
description = "solagent.rs parameters"

[dependencies]
serde_json = "1.0"