[package]
name = "vector_search"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rig-core = "0.7.0"
rig-postgres = "=0.1.1"
dotenvy = "0.15.7"
anyhow = "1.0.94"
