[package]
name = "solagent-plugin-birdeye"
version = "0.1.3"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "birdeye"]
license = "MIT"
description = "solagent.rs plugin birdeye"

[dependencies]
solagent-core = "0.1.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
