[package]
name = "solagent-plugin-dexscreener"
version = "0.1.1"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "dexscreener"]
license = "Apache-2.0"
description = "solagent plugin dexscreener"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
