[package]
name = "solagent-plugin-gibwork"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
readme = "README.md"
keywords = ["solagent", "plugin", "gibwork"]
license = "Apache 2.0"
description = "solagent plugin gibwork"

[dependencies]
solagent-core = { path = "../../solagent-core" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json"] }
bincode = "1.3.3"
