[package]
name = "solagent-plugin-helius"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "helius"]
license = "Apache-2.0"
description = "solagent.rs plugin helius"

[dependencies]
solagent-core = "0.1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
helius = "0.2.4"
