[package]
name = "solagent-plugin-jupiter"
version = "0.1.2"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "jupiter"]
license = "Apache-2.0"
description = "solagent plugin jupiter"

[dependencies]
solagent-core = "0.1.6"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.80"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
spl-token = "7.0.0"
bincode = "1.3.3"
