[package]
name = "solagent-plugin-pumpfun"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "pumpfun"]
license = "Apache-2.0"
description = "solagent.rs plugin pumpfun"

[dependencies]
solagent-core = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
bincode = "1.3.3"
