[package]
name = "solagent-plugin-pyth"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "pyth"]
license = "Apache-2.0"
description = "solagent.rs plugin pyth"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
