[package]
name = "solagent-plugin-solana"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "solana"]
license = "Apache-2.0"
description = "solagent.rs plugin solana"

[dependencies]
solagent-core = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
solana-account-decoder = "2.1.9"
spl-token-2022 = "6.0.0"
serde_json = "1.0"
mpl-token-metadata = { version = "5.1.0", features = ["serde"] }
