[package]
name = "solagent-plugin-solayer"
version = "0.1.1"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "solayer"]
license = "Apache-2.0"
description = "solagent.rs plugin solayer"

[dependencies]
solagent-core = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json"] }
bincode = "1.3.3"
