[package]
name = "solagent-plugin-story"
version = "0.1.2"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "plugin", "story"]
license = "Apache-2.0"
description = "solagent.rs plugin story"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
