[package]
name = "solagent-wallet-solana"
version = "0.1.4"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "wallet", "solana"]
license = "Apache-2.0"
description = "solagent solana local wallet"

[dependencies]
dotenv = "0.15"
solana-sdk = "2.1.7"
thiserror = "2.0.12"
anyhow = "1.0"