[package]
name = "solagent-rig-birdeye"
version = "0.1.2"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "rig", "birdeye"]
license = "Apache-2.0"
description = "solagent rig birdeye"

[dependencies]
solagent-core = "0.1.6"
solagent-plugin-birdeye = "0.1.7"
solagent-parameters = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.9"
serde_json = "1.0"
