[package]
name = "solagent-rig-cookie"
version = "0.1.1"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "rig", "cookie"]
license = "Apache-2.0"
description = "solagent.rs rig cookie"

[dependencies]
solagent-core = "0.1.3"
solagent-parameters = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
solagent-plugin-cookie = "0.1.0"
thiserror = "2.0.9"