[package]
name = "solagent-rig-dexscreener"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "rig", "dexscreener"]
license = "Apache-2.0"
description = "solagent.rs rig dexscreener"

[dependencies]
solagent-core = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
solagent-plugin-dexscreener = "0.1.1"
thiserror = "2.0.9"