[package]
name = "solagent-rig-goplus"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
readme = "README.md"
keywords = ["solagent", "rig", "goplus"]
license = "Apache-2.0"
description = "solagent.rs rig goplus"

[dependencies]
solagent-core = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solagent-plugin-goplus = { path = "../../../solagent-plugins/goplus" }
thiserror = "2.0.9"
