[package]
name = "solagent-rig-jupiter"
version = "0.1.2"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "rig", "jupiter"]
license = "MIT"
description = "solagent rig jupiter"

[dependencies]
solagent-core = "0.1.6"
solagent-plugin-jupiter = "0.1.2"
solagent-parameters = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.9"
serde_json = "1.0"