[package]
name = "solagent-rig-solayer"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "rig", "solayer"]
license = "Apache-2.0"
description = "solagent.rs rig solayer"

[dependencies]
solagent-core = "0.1.0"
solagent-plugin-solayer = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.9"
serde_json = "1.0"