[package]
name = "solagent-rig-story"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/solagent.rs"
keywords = ["solagent", "rig", "story"]
license = "Apache-2.0"
description = "solagent.rs rig story protocol"

[dependencies]
solagent-core = "0.1.3"
solagent-parameters = "0.1.0"
solagent-plugin-story = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.9"
serde_json = "1.0"